[tool.poetry]
name = "abilling"
version = "0.1.0"
description = ""
authors = ["Andrey.Shevchuk <angru@list.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
asyncpg = "^0.21.0"
asyncpgsa = "^0.26.3"
pydantic = {extras = ["dotenv"], version = "^1.7.2"}
fastapi = "^0.61.2"
uvicorn = "^0.12.2"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
alembic = "^1.4.3"
psycopg2-binary = "^2.8.6"
pytest-asyncio = "^0.14.0"
async-asgi-testclient = "^1.4.4"
pytest-cov = "^2.10.1"
pre-commit = "^2.9.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
